@@ -364,6 +364,13 @@ EXPORT_SYMBOL size_t HX_strltrim(char *expr)
 	return diff;
 }
 
+EXPORT_SYMBOL char *HX_stpltrim(const char *p)
+{
+	while (HX_isspace(*p))
+		++p;
+	return const_cast1(char *, p);
+}
+
 /* supports negative offsets like scripting languages */
 EXPORT_SYMBOL char *HX_strmid(const char *expr, long offset, long length)
 {
